revision total scrollbar fix

--- a/src/app/revision/revision.component.scss
+++ b/src/app/revision/revision.component.scss
@@ -1,3 +1,15 @@
 .thhead{
     width: 16%;
 } 
+
+label{
+    font-size: 13px !important;
+}
+.tfoot{
+    position: absolute;
+      bottom: 15px;
+      background-color: #f6f9fc;
+      width: 97.8%;
+      border: 1px solid #dee2e6;
+      border-radius: 0 0px 5px 5px;
+  }
